<resources>
    <string name="app_name">MAD project user interface</string>

    <string name="enter_card_detail">Enter Card Details</string>
    <string name="enter_transfer_detail">Enter Transfer Details</string>
    <string name="card_detail">Card Details</string>
    <string name="card_number">Card number</string>
    <string name="card">Card</string>
    <string name="card_holder">Card holder’s name</string>
    <string name="mm_yy_">(MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="pay_card">Pay</string>
    <string name="pay_transfer">Pay</string>
    <string name="pay_via">Pay via</string>
    <string name="slip_detail">Slip Details</string>
    <string name="name">Name</string>
    <string name="account_no">Account Number</string>
    <string name="amount">Amount</string>
    <string name="bank_t">Bank Transfer</string>
    <string name="save_cd_for_future">save this card for future payments</string>

    
    //navbar
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>