<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enter_transfer_detaill">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bluetextureimage"
        android:layout_width="380dp"
        android:layout_height="480dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="57dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/bluebackground"
        app:shapeAppearanceOverlay="@style/roundimageview" />

    <TextView
        android:id="@+id/entercdetail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bluetextureimage"
        android:layout_alignTop="@+id/bluetextureimage"
        android:layout_alignEnd="@+id/bluetextureimage"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:text="@string/enter_transfer_detail"
        android:textColor="#0B0A0A"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/slipdetail"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entercdetail"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="248dp"
        android:text="@string/slip_detail"
        android:textColor="#0B0A0A"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/cardno"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entercdetail"
        android:layout_alignStart="@+id/bluetextureimage"
        android:layout_alignEnd="@+id/bluetextureimage"
        android:layout_marginStart="17dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/account_no" />

    <EditText
        android:id="@+id/name"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entercdetail"
        android:layout_alignStart="@+id/bluetextureimage"
        android:layout_alignEnd="@+id/bluetextureimage"
        android:layout_marginStart="19dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entercdetail"
        android:layout_alignStart="@+id/bluetextureimage"
        android:layout_alignEnd="@+id/bluetextureimage"
        android:layout_marginStart="21dp"
        android:layout_marginTop="266dp"
        android:layout_marginEnd="167dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/amount" />

    <Button
        android:id="@+id/paycd"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount"
        android:layout_alignStart="@+id/bluetextureimage"
        android:layout_alignEnd="@+id/bluetextureimage"
        android:layout_marginStart="121dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="129dp"
        android:background="@drawable/roundbtn"
        android:text="@string/pay_transfer" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="211dp"
        android:layout_height="165dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="194dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="29dp"
        app:srcCompat="@drawable/banktransfer" />

    <!--box to upload sliip. using choose file
    -->



</RelativeLayout>