<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentType">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bluetextureimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/fto5lyx_light_blue_backgrounds"
        app:shapeAppearanceOverlay="@style/roundimageview" />

    <TextView
        android:id="@+id/payvia"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bluetextureimage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="149dp"
        android:text="@string/pay_via"
        android:textColor="#0B0A0A"
        android:textSize="24sp" />

    <Button
        android:id="@+id/cardbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payvia"
        android:layout_alignStart="@+id/bluetextureimage"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="154dp"
        android:background="@drawable/roundbtn"
        android:onClick="selectedCard"
        android:text="@string/card" />

    <Button
        android:id="@+id/banktransferbtn"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardbtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="142dp"
        android:background="@drawable/roundbtn"
        android:text="@string/bank_t"
        android:onClick="selectedBankTransfer"
        app:shapeAppearanceOverlay="@style/roundbtnview" />


</RelativeLayout>